--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "bunyan-elasticsearch",
-  "version": "0.0.1",
+  "name": "bunyan-elasticsearch-new",
+  "version": "0.0.2",
   "description": "A Bunyan stream for sending log data to Elasticsearch",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/ccowan/bunyan-elasticsearch.git"
+    "url": "git://github.com/trozz/bunyan-elasticsearch.git"
   },
   "keywords": [
     "Bunyan",
@@ -18,12 +18,12 @@
   "author": "ccowan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ccowan/bunyan-elasticsearch/issues"
+    "url": "https://github.com/trozz/bunyan-elasticsearch/issues"
   },
-  "homepage": "https://github.com/ccowan/bunyan-elasticsearch",
+  "homepage": "https://github.com/trozz/bunyan-elasticsearch",
   "dependencies": {
-    "moment": "~2.5.1",
-    "elasticsearch": "~1.5.8"
+    "moment": "~2.10.6",
+    "elasticsearch": "~8.2.0"
   },
   "devDependencies": {
     "mocha": "~1.17.1"
