--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "lib/bunyan_logsene.js",
   "scripts": {
     "pretest": "eslint .",
-    "test": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- --recursive --timeout=30000",
-    "test:no-cover": "NODE_ENV=test mocha --recursive --timeout=30000",
+    "test": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha",
+    "test:junit": "NODE_ENV=test istanbul cover node_modules/.bin/_mocha -- --reporter mocha-junit-reporter --reporter-options mochaFile=$CIRCLE_TEST_REPORTS/mocha/junit.xml",
+    "test:no-cover": "NODE_ENV=test mocha",
     "test:debug": "npm run test:no-cover -- --debug-brk",
     "posttest": "nsp check"
   },
@@ -25,7 +26,7 @@
   },
   "homepage": "https://github.com/6RiverSystems/bunyan-logsene",
   "dependencies": {
-    "logsene-js": "git+ssh://git@github.com:6riversystems/logsene-js.git#349850f2aaaaa87ebde9447d94c0f9ade41b881f"
+    "logsene-js": "=1.0.20"
   },
   "devDependencies": {
     "bunyan": "=1.8.1",
@@ -34,6 +35,7 @@
     "eslint-config-defaults": "=9.0.0",
     "istanbul": "=0.4.3",
     "mocha": "=2.4.5",
+    "mocha-junit-reporter": "=1.11.1",
     "nsp": "=2.4.0",
     "sinon": "=1.17.4"
   }
