oops, I think we were running tests twice

--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,6 @@ dependencies:
     - npm update -g npm
 
 test:
-  pre:
+  override:
     - mkdir -p $CIRCLE_TEST_REPORTS/mocha
     - npm run test:junit
